added nand support

--- a/drivers/amlogic/Makefile
+++ b/drivers/amlogic/Makefile
@@ -34,10 +34,8 @@ obj-y += cpufreq/
 obj-$(CONFIG_GPIO_AMLOGIC) += gpio/
 obj-y += pinctrl/
 
-ifneq ($(wildcard $(srctree)/../hardware/amlogic/nand),)
-	obj-$(CONFIG_AML_NEXT_GEN_NAND) += ../../../hardware/amlogic/nand/amlnf/
-	obj-$(CONFIG_AM_NAND) += ../../../hardware/amlogic/nand/nand/
-endif
+obj-$(CONFIG_AML_NEXT_GEN_NAND) += nand/amlnf/
+obj-$(CONFIG_AM_NAND) += nand/nand/
 
 obj-y += ethernet/
 
